--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,12 @@ dependencies {
 
     implementation 'org.mmtextview:mmtextview:1.9'
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
+    compile 'android.arch.lifecycle:extensions:1.1.1'
+    annotationProcessor 'android.arch.lifecycle:compiler:1.1.1'
+
+    implementation "android.arch.persistence.room:runtime:1.0.0"
+    annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
 }
 repositories {
     mavenCentral()
