--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,9 @@ dependencies {
 
     implementation "android.arch.persistence.room:runtime:1.0.0"
     annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
+
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
+    implementation "com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0"
 }
 repositories {
     mavenCentral()
