--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,7 @@
             android:theme="@style/AppTheme.NoActionBar">
 
         </activity>
+        <activity android:name=".activities.PrimeCalculator"></activity>
 
         <receiver android:name=".receivers.InternetStateReceiver">
             <intent-filter>
