--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".activities.NewsListActivity"
+            android:name=".activities.SkyNewsActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -26,6 +26,8 @@
             android:theme="@style/AppTheme.NoActionBar">
 
         </activity>
+
+        <!--<activity android:name=".activities.SkyNewsActivity"/>-->
 
         <activity android:name=".activities.LoginRegisterActivity"
             android:theme="@style/AppTheme.NoActionBar">
